# BMSTU_ALGBIO_Lab_2

./: .gitmodules  CMakeLists.txt  Hirschberg.cpp  README.md  main.cpp  tests.cpp
